<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:fitsSystemWindows="false"
    tools:background="@color/mine_shaft">

    <TextView
        android:id="@+id/application_title"
        android:layout_width="wrap_content"
        android:textColor="@color/colorWhite"
        android:text="@string/nav_app_logo_movie"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/rubik_one_regular"
        android:textAllCaps="true"
        android:textSize="48sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btn_about_tmdb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_about_tmdb"
        style="@style/BaseClickableCard"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginBottom="24dp"
        android:visibility="gone"
        app:cardBackgroundColor="@color/mine_shaft_medium"
        app:cardCornerRadius="14dp"
        app:layout_constraintBottom_toTopOf="@+id/login_with_tmdb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible">

        <TextView
            android:id="@+id/about_tmdb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/cc_montserrat_regular"
            android:text="@string/nav_about_the_movie_database"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/login_with_tmdb"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:visibility="gone"
        app:cardBackgroundColor="@color/caribbean_green_tmdb"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toTopOf="@+id/login_with_guest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cc_montserrat_medium"
                android:gravity="center"
                android:text="@string/nav_login_with_tmdb"
                android:textColor="@color/mine_shaft"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cc_montserrat_regular"
                android:gravity="center"
                android:text="@string/nav_recommendation"
                android:textColor="@color/mine_shaft"
                android:textSize="10sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/login_with_guest"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:visibility="gone"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cc_montserrat_medium"
                android:gravity="center"
                android:text="@string/nav_login_with_guest"
                android:textColor="@color/mine_shaft"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cc_montserrat_regular"
                android:gravity="center"
                android:text="@string/nav_most_features_will_not_be_available"
                android:textColor="@color/mine_shaft"
                android:textSize="10sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>